@@ -3,6 +3,7 @@ This this the changelog file for the Pothos C++ library.
 Release 0.2.1 (pending)
 ==========================
 
+- Created new test suite macro for array equality
 - WorkerActor push downstream only when data available
 - Fix Topology::waitInactive() activity checker
 - Fix input port buffer accumulator total counter
